se agrega el titulo, el logo en html y se centra con css

--- a/PRACTICA-GIT-GITHUB/index.html
+++ b/PRACTICA-GIT-GITHUB/index.html
@@ -8,6 +8,11 @@
 <body>
 	<header>
 		<!-- Agrega aquí el logo y el título de la página -->
+		<!--agregamos un div para poder ponerle flexbox al logo y al titulo-->
+        <div class="logoytitulo">
+            <img src="/img/logo-codebuddies.png" alt="logo-codebuddies" id="logo">
+            <h1>CodeBuddies!</h1>
+		</div>
 		<nav>
 			<ul>
 				<li><a href="#">Inicio</a></li>
