Se agregó un h3, un p y un img en el primer section

--- a/PRACTICA-GIT-GITHUB/index.html
+++ b/PRACTICA-GIT-GITHUB/index.html
@@ -25,6 +25,9 @@
 	<main>
 		<section>
 			<!-- Compañero 1. Agregar un "h3", un "p" y un "img" -->
+			<h3>Creatividad. Flexibilidad. Oportunidades. Aprendizajes.</h3>
+			<p>En CodeBuddies, nos enfocamos en ayudar a los miembros a aprovechar estas ventajas. Ofrecemos recursos de aprendizaje, herramientas y una comunidad de apoyo que puede ayudar a los programadores a mejorar sus habilidades y alcanzar sus metas. Creemos que la programación puede cambiar vidas y estamos comprometidos a ayudar a nuestros miembros a alcanzar su máximo potencial.</p>
+			<img src="/img/codebuddiesayuda.jpg" alt="codebuddies-ayudando">
 		</section>
 		<section>
 			<!-- Compañero 2. Agregar un "h3", un "p" y un "img" -->
