se agrega h3, un p y un img en el segundo section

--- a/PRACTICA-GIT-GITHUB/index.html
+++ b/PRACTICA-GIT-GITHUB/index.html
@@ -31,6 +31,9 @@
 		</section>
 		<section>
 			<!-- Compañero 2. Agregar un "h3", un "p" y un "img" -->
+			<h3>Herramientas</h3>
+            <p>Tenemos una amplia variedad de actividades que sirven de herramienta para ayudar a nuestros miembros en programación, tales como mentorías personalizadas, clases presenciales, proyectos colaborativos, talleres y eventos en línea, recursos de aprendizaje, sesiones de práctica en línea, grupos de discusión y una comunidad de apoyo.</p>
+            <img src="/img/clasedecodebuddies.jpg" alt="clase-codebuddies">
 		</section>
 	</main>
 	<footer>
