Se agregó en el footer los nombres junto al simbolo de copyright y el año

--- a/PRACTICA-GIT-GITHUB/index.html
+++ b/PRACTICA-GIT-GITHUB/index.html
@@ -39,6 +39,7 @@
 	<footer>
 		<!-- Agregar sus nombre con el simbolo de copyright y el año -->
 		<!-- DEBEN QUEDAR LOS NOMBRES UNO A LADO DEL OTRO  -->
+		<p> Stevens Natali Solange y Aquino Gonzalo Alejandro © 2023</p>
 	</footer>
 </body>
 </html>
