se agregó una fuente, se le colocó el icono, cambio el title de la pagina, y ademas se centró el contenido principal

--- a/PRACTICA-GIT-GITHUB/index.html
+++ b/PRACTICA-GIT-GITHUB/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Título de la página</title>
+	<title>CodeBuddies!</title>
 	<link rel="stylesheet" href="./style.css">
+	<link rel="icon" href="/img/logo-codebuddies.ico">
 </head>
 <body>
 	<header>
@@ -23,18 +24,21 @@
 		</nav>
 	</header>
 	<main>
-		<section>
-			<!-- Compañero 1. Agregar un "h3", un "p" y un "img" -->
-			<h3>Creatividad. Flexibilidad. Oportunidades. Aprendizajes.</h3>
-			<p>En CodeBuddies, nos enfocamos en ayudar a los miembros a aprovechar estas ventajas. Ofrecemos recursos de aprendizaje, herramientas y una comunidad de apoyo que puede ayudar a los programadores a mejorar sus habilidades y alcanzar sus metas. Creemos que la programación puede cambiar vidas y estamos comprometidos a ayudar a nuestros miembros a alcanzar su máximo potencial.</p>
-			<img src="/img/codebuddiesayuda.jpg" alt="codebuddies-ayudando">
-		</section>
-		<section>
-			<!-- Compañero 2. Agregar un "h3", un "p" y un "img" -->
-			<h3>Herramientas</h3>
-            <p>Tenemos una amplia variedad de actividades que sirven de herramienta para ayudar a nuestros miembros en programación, tales como mentorías personalizadas, clases presenciales, proyectos colaborativos, talleres y eventos en línea, recursos de aprendizaje, sesiones de práctica en línea, grupos de discusión y una comunidad de apoyo.</p>
-            <img src="/img/clasedecodebuddies.jpg" alt="clase-codebuddies">
-		</section>
+		<!--Puse un div para poder hacer un flexbox hijo-->
+		<div class="contenedor">
+			<section>
+				<!-- Compañero 1. Agregar un "h3", un "p" y un "img" -->
+				<h3>Creatividad. Flexibilidad. Oportunidades. Aprendizajes.</h3>
+				<p>En CodeBuddies, nos enfocamos en ayudar a los miembros a aprovechar estas ventajas. Ofrecemos recursos de aprendizaje, herramientas y una comunidad de apoyo que puede ayudar a los programadores a mejorar sus habilidades y alcanzar sus metas. Creemos que la programación puede cambiar vidas y estamos comprometidos a ayudar a nuestros miembros a alcanzar su máximo potencial.</p>
+				<img src="/img/codebuddiesayuda.jpg" alt="codebuddies-ayudando">
+			</section>
+			<section>
+				<!-- Compañero 2. Agregar un "h3", un "p" y un "img" -->
+				<h3>Herramientas</h3>
+				<p>Tenemos una amplia variedad de actividades que sirven de herramienta para ayudar a nuestros miembros en programación, tales como mentorías personalizadas, clases presenciales, proyectos colaborativos, talleres y eventos en línea, recursos de aprendizaje, sesiones de práctica en línea, grupos de discusión y una comunidad de apoyo.</p>
+				<img src="/img/clasedecodebuddies.jpg" alt="clase-codebuddies">
+			</section>
+		</div>
 	</main>
 	<footer>
 		<!-- Agregar sus nombre con el simbolo de copyright y el año -->
